# merco

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.reasonix/semantic/: index.jsonl  index.meta.json
cli/: __init__.py  commands.py  input_driver.py  interrupt.py  main.py  registry.py  tui.py
config/: merco.json.example  opencode.json.example  openmercury-config.json.example  openmercury.json.example
docs/: architecture.md  architecture.puml  pre-existing-test-failures-analysis.md  user_pasted_clipboard_long_content_as_file_# merco 架构审查报告.txt
docs/merco/: SKILL.md
docs/plans/: 2026-05-29-compress-fork-history-fixes.md  2026-05-29-dashboard-after-mcp.md  2026-05-29-mcp-client.md  2026-05-29-memory-recall.md  2026-05-29-session-fork.md  2026-05-29-slash-command-panel.md  2026-05-31-input-driver.md  2026-06-07-stream-content.md  2026-06-14-hooks-agent.md  2026-06-14-observability-agent.md
docs/project-vision/: SKILL.md  architecture.md  decisions.md
docs/superpowers/: test_strategy.md
fastapi_project/: requirements.txt
fastapi_project/database/: database.py
merco/: __init__.py  setup.py
merco/agents/: __init__.py  profile.py  subagent.py
merco/context/: __init__.py  pipeline.py  recovery.py
merco/core/: __init__.py  agent.py  config.py  context.py  empty_response.py  interrupt.py  llm.py  loop_policy.py  message.py  pipeline.py  runtime.py  self_healing.py  session.py
merco/gateway/: __init__.py  base.py  registry.py  telegram.py  webhook.py
merco/hooks/: __init__.py  chat_hooks.py  registry.py
merco/mcp/: __init__.py  config.py  manager.py  tool.py
merco/memory/: __init__.py  backend.py  compressor.py  recall.py  save_pipeline.py  search.py  store.py  (+3 more)
openmercury/: __init__.py  agent.py  cli.py  web.py
tests/: conftest.py  test_guard.py  test_registry_guard.py  test_session.py
web/: __init__.py  app.py
(+332 files in other folders)
