[project]
name = "openmercury"
version = "0.1.0"
description = "AI-driven self-improving development platform"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "openhands-sdk>=2.0.0",
    "hermes-agent>=0.14.0",
    "textual>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "aiofiles>=24.0.0",
]

[project.scripts]
openmercury = "openmercury.cli:main"
openmercury-agent = "openmercury.agent:main"
openmercury-web = "openmercury.web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]
