[project]
name = "merco"
version = "0.5.0"
description = "AI-driven self-improving development platform"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "openai>=1.0.0",
    "typer>=0.12.0",
    "textual>=1.0.0",
    "rich>=13.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "aiofiles>=24.0.0",
    "ddgs>=7.0.0",
    "ddgs>=9.14.4",
    "mcp>=1.0.0",
    "prompt-toolkit>=3.0.0",
]

[project.scripts]
merco = "cli.main:app"
merco-web = "web.app:create_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["merco", "cli", "web"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
